# PARVPO-lab3

./: docker-compose.yaml
client/: Dockerfile  app.py  pyproject.toml
client/templates/: create_product.html  create_user.html  index.html  update_product.html
server/: Dockerfile  alembic.ini  main.py  pyproject.toml
server/API/: __init__.py
server/API/posts/: crud.py
server/API/users/: crud.py  views.py
server/App/: main.py
server/alembic/: env.py
server/alembic/versions/: 477edcb579ff_initial_migration.py
server/api/products/: crud.py  views.py
server/core/: config.py  db_helper.py
server/core/models/: __init__.py  posts.py  users.py
