[tool.poetry]
name = "client"
version = "0.1.0"
description = ""
authors = ["bulygin.rk <bulygin.rk@dozen.mephi.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
