[tool.poetry]
name = "parvpo"
version = "0.1.0"
description = ""
authors = ["bulygin.rk <bulygin.rk@dozen.mephi.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
pydantic = {extras = ["email"], version = "^2.10.4"}
pydantic-settings = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
